#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-process-monitor"
version = "0.1.5"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "A daemon to monitor and introspect system processes and events"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["sensors-stable"]
debug-async = []
sensors-stable = ["sensor-procmon", "sensor-x11", "sensor-wayland"]
sensors-most = [
  "sensor-procmon",
  "sensor-x11",
  "sensor-wayland",
  "sensor-gnome-shellext",
]
sensors-all = [
  "sensor-procmon",
  "sensor-x11",
  "sensor-wayland",
  "sensor-gnome-shellext",
  "sensor-mutter",
]
sensor-procmon = ["procmon-sys"]
sensor-x11 = ["x11rb"]
sensor-wayland = [
  "wayland-client",
  "wayland-protocols",
  "wayland-protocols-wlr",
]
sensor-mutter = []
sensor-gnome-shellext = []

[dependencies]
cfg-if = "1.0.0"
async-trait = "0.1.68"
byteorder = "1.4.3"
clap = { version = "4.3.1", features = ["derive"] }
clap_complete = "4.3.1"
ctrlc = { version = "3.4.0", features = ["termination"] }
config = "0.13.3"
dbus = "0.9.7"
# dbus-tokio = "0.7.5"
dbus-tree = "0.9.2"
dyn-clone = "1.0.11"
dyn-clonable = "0.9.0"
indexmap = "1.9.3"
libc = "0.2.145"
nix = "0.26.2"
atty = "0.2.14"
serde_json = "1.0.96"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full", "tracing", "test-util"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.9", features = ["parking_lot"] }
flume = "0.10.14"
toml = "0.7.4"
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
hotwatch = "0.5.0"
lazy_static = "1.4.0"
walkdir = "2.3.3"
procmon-sys = { version = "0.0.3", path = "src/procmon-sys", optional = true }
x11rb = { version = "0.12.0", optional = true, features = [
  "allow-unsafe-code",
] }
wayland-client = { version = "0.30.2", features = ["log"], optional = true }
wayland-protocols = { version = "0.30.0", features = [
  "unstable",
], optional = true }
wayland-protocols-wlr = { version = "0.1.0", features = [
  "client",
], optional = true }
i18n-embed = { version = "0.13.9", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.6.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.28.2", features = ["full", "tracing", "test-util"] }
