#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption-process-monitor"
version = "0.1.3"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "A daemon to monitor and introspect system processes and events"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["sensors-stable"]
sensors-stable = ["sensor-procmon", "sensor-x11", "sensor-wayland"]
sensors-most = [
    "sensor-procmon",
    "sensor-x11",
    "sensor-wayland",
    "sensor-gnome-shellext",
]
sensors-all = [
    "sensor-procmon",
    "sensor-x11",
    "sensor-wayland",
    "sensor-gnome-shellext",
    "sensor-mutter",
]
sensor-procmon = ["procmon-sys"]
sensor-x11 = ["x11rb"]
sensor-wayland = [
    "wayland-client",
    "wayland-protocols",
    "wayland-protocols-wlr",
]
sensor-mutter = []
sensor-gnome-shellext = []

[dependencies]
cfg-if = "1.0.0"
async-trait = "0.1.73"
byteorder = "1.4.3"
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
ctrlc = { version = "3.4.1", features = ["termination"] }
config = "0.13.3"
dbus = "0.9.7"
# dbus-tokio = "0.7.5"
dbus-tree = "0.9.2"
dyn-clone = "1.0.14"
dyn-clonable = "0.9.0"
indexmap = "2.0.0"
log = "0.4.20"
syslog = "6.1.0"
libc = "0.2.148"
nix = "0.26.4"
pretty_env_logger = "0.4.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
# tracing = "0.1.26"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.2.20"
flume = "0.11"
toml = "0.8.0"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
hotwatch = "0.4.6"
lazy_static = "1.4.0"
walkdir = "2.4.0"
procmon-sys = { version = "0.0.3", path = "src/procmon-sys", optional = true }
x11rb = { version = "0.12.0", optional = true, features = [
    "allow-unsafe-code",
] }
wayland-client = { version = "0.31.1", features = ["log"], optional = true }
wayland-protocols = { version = "0.31.0", features = [
    "unstable",
], optional = true }
wayland-protocols-wlr = { version = "0.2.0", features = [
    "client",
], optional = true }
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["test-util"] }
