#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.


[package]
name = "eruption-util"
version = "0.0.6"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
edition = "2021"
description = "A CLI developer support utility for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://github.com/X3n0m0rph59/eruption"
license = "GPLv3+"
readme = "README.md"
resolver = "2"

[dependencies]
cfg-if = "1.0.0"
clap =  { version = "3.0.0-beta.5", features = ["derive"] }
clap_generate = "3.0.0-beta.5"
ctrlc = { version = "3.2.1", features = ["termination"] }
colored = "2.0.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
libc = "0.2.106"
nix = "0.23.0"
parking_lot = { version = "0.11.2", features = ["deadlock_detection"] }
tokio = { version = "1.13.0", features = ["full"] }
#tracing = "0.1.26"
#tracing-futures = "0.2.5"
#tracing-subscriber = "0.2.20"
crossbeam = "0.8.1"
thiserror = "1.0.30"
eyre = "0.6.5"
color-eyre = "0.5.11"
hexdump = "0.1.1"
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master" }
udev = "0.6.2"
evdev-rs = "0.5.0"
lazy_static = "1.4.0"
bitvec = "0.22.3"
i18n-embed = { version = "0.13.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.0"
rust-embed = "6.2.0"
unic-langid = "0.9.0"

[dev-dependencies]
icecream = "0.1.0"
pretty_assertions = "1.0.0"
tokio = { version = "1.13.0", features = ["test-util"] }
