#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-util"
version = "0.0.11"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.65"
description = "A CLI developer support utility for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
debug-async = []

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.0"
ctrlc = { version = "3.2.5", features = ["termination"] }
colored = "2.0.0"
libc = "0.2.141"
nix = "0.26.2"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
tokio = { version = "1.27.0", features = ["full", "tracing", "test-util"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.16", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.1.8", features = ["parking_lot"] }
flume = "0.10.14"
thiserror = "1.0.40"
eyre = "0.6.8"
color-eyre = "0.6.2"
hexdump = "0.1.1"
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master", default-features = false, features = [
  "linux-static-libusb",
] }
udev = "0.7"
evdev-rs = "0.6.1"
lazy_static = "1.4.0"
bitvec = "1.0.1"
i18n-embed = { version = "0.13.8", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.6.6"
rust-embed = { version = "6.6.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.27.0", features = ["full", "tracing", "test-util"] }
