#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption-watchdog"
version = "0.0.5"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>", "The Eruption Development Team"]
edition = "2021"
rust-version = "1.65"
description = "A watchdog daemon for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []
debug-async = []

[dependencies]
cfg-if = "1.0.0"
flume = "0.10.14"
clap =  { version = "4.0.29", features = ["derive"] }
clap_complete = "4.0.6"
ctrlc = { version = "3.2.4", features = ["termination"] }
syslog = "6.0.1"
lazy_static = "1.4.0"
libc = "0.2.138"
atty = "0.2.14"
parking_lot = { version = "0.12.1", features = ["send_guard", "hardware-lock-elision"] }
tokio = { version = "1.23.0", features = ["full", "tracing", "test-util"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.16", features = ["parking_lot", "registry", "env-filter"] }
console-subscriber = { version = "0.1.8", features = ["parking_lot"] }
thiserror = "1.0.37"
eyre = "0.6.8"
color-eyre = "0.6.2"
lockfile = "0.4.0"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = { version = "6.4.2", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
eruption-sdk = { path = "../sdk/lib/rust/eruption-rs" }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.23.0", features = ["full", "tracing", "test-util"] }
