#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruption"
version = "0.3.5"
build = "build.rs"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "Realtime RGB LED Driver for Linux"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = []                      #["mimalloc_allocator"]
mimalloc_allocator = ["mimalloc"]
profiling = ["coz"]

[dependencies]
mimalloc = { version = "0.1.39", optional = true, default-features = false }
coz = { version = "0.1.3", optional = true }
cfg-if = "1.0.0"
flume = { version = "0.11", features = ["async"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
async-trait = "0.1.74"
# tracing = "0.1.26"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.2.20"
libc = "0.2.150"
nix = "0.26.4"
systemd = "0.10.0"
log = "0.4.20"
syslog = "6.1.0"
pretty_env_logger = "0.4.0"
thiserror = "1.0.50"
eyre = "0.6.8"
color-eyre = "0.6.2"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
socket2 = { version = "0.5.5", features = ["all"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
clap = "4.4.8"
hotwatch = "0.4.6"
config = "0.13.3"
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", branch = "master", default-features = false, features = [
    "linux-static-libusb",
] }
udev = "0.8.0"
evdev-rs = "0.6.1"
hexdump = "0.1.1"
byteorder = "1.5.0"
indexmap = { version = "2.1.0", features = ["serde"] }
itertools = "0.12.0"
rayon = "1.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
colorgrad = "0.6.2"
csscolorparser = { version = "0.6.2", features = ["serde"] }
palette = "0.6.1"
nalgebra = "0.32.3"
noise = "0.8.2"
simdnoise = "3.1.6"
mlua = { version = "0.8", features = ["lua54"] }
sysinfo = "0.29.10"
procinfo = "0.4.2"
bincode = "2.0.0-rc.3"
rustfft = "6.1.0"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
dbus = "0.9.7"
dbus-tree = "0.9.2"
paste = "1.0.14"
bitvec = "1.0.1"
serialport = "4.2.2"
crc8 = "0.1.1"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
same-file = "1"

# ubuntu bionic
# sysinfo = "=0.14.2"

[dev-dependencies]
pretty_assertions = "1.4.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["test-util"] }

[build-dependencies]
prost-build = "0.12.1"
