#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "eruption"
version = "0.5.0"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "Realtime RGB LED Driver for Linux"
repository = "https://github.com/eruption-project/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
default = ["dbus-ipc", "openrgb_bridge", "udev", "evdev-rs"]
windows = [
  "dbus-ipc",
  "winapi",
  "usb_enumeration",
  "windows-named-pipe",
  "hwaccel",
]
dbus-ipc = ["dbus", "dbus-tree"]
mimalloc_allocator = ["mimalloc"]
openrgb_bridge = ["openrgb"]
hwaccel = ["raw-window-handle", "drm", "wgpu", "shaderc"]
profiling = ["coz"]

[dependencies]
mimalloc = { version = "0.1.39", optional = true, default-features = false }
coz = { version = "0.1.3", optional = true }
cfg-if = "1.0.0"
flume = "0.11.0"
tracing-mutex = { version = "0.3.0", features = ["lock_api"] }
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
console-subscriber = "0.2.0"
libc = "0.2.148"
nix = { version = "0.27.1", features = ["user", "process", "fs", "poll"] }
is-terminal = "0.4.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
socket2 = { version = "0.5.4", features = ["all"] }
windows-named-pipe = { git = "https://github.com/X3n0m0rph59/windows-named-pipe", branch = "main", optional = true }
winapi = { version = "0.3.9", features = ["namedpipeapi"], optional = true }
ctrlc = { version = "3.4.1", features = ["termination"] }
clap = "4.4.7"
hotwatch = "0.5.0"
config = "0.13.3"
eyre = "0.6.8"
color-eyre = "0.6.2"
thiserror = "1.0.48"
udev = { version = "0.8", optional = true }
evdev-rs = { version = "0.6.1", optional = true }
usb_enumeration = { version = "0.2.0", optional = true }
hexdump = "0.1.1"
byteorder = "1.5.0"
indexmap = { version = "2.0.0", features = ["serde", "rayon"] }
itertools = "0.12.0"
rayon = "1.7.0"
lazy_static = "1.4.0"
rand = "0.8.5"
colorgrad = "0.6.2"
csscolorparser = { version = "0.6.2", features = ["serde"] }
raqote = "0.8.3"
rgb = { version = "0.8.36", features = ["argb", "serde"] }
# image = "0.24.6"
# imageproc = { version = "0.23.0", features = ["rayon"] }
resize = "0.8.0"
palette = "0.7.3"
nalgebra = "0.32.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
transpose = "0.2.2"
noise = "0.8.2"
simdnoise = "3.1.6"
sysinfo = "0.29.10"
bincode = "2.0.0-rc.3"
rustfft = "6.1.0"
toml = "0.8.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dbus = { version = "0.9.7", optional = true }
dbus-tree = { version = "0.9.2", optional = true }
paste = "1.0.14"
bitvec = "1.0.1"
openrgb = { version = "0.1.2", optional = true }
serialport = "4.2.2"
crc8 = "0.1.1"
crc16 = "0.4.0"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
same-file = "1"
bytemuck = "1.14.0"
bitfield-struct = "0.5.4"
raw-window-handle = { version = "0.6", optional = true }
drm = { version = "0.11", optional = true }
wgpu = { version = "0.18.0", features = [
  "spirv",
  "vulkan-portability",
], optional = true }
shaderc = { version = "0.8.2", optional = true }
tokio = { version = "1.35.0", features = ["full"] }
mio = { version = "0.8.10" }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "78f273800a7e9fc7f428e45d2cfebaf7b44862c1", default-features = false, features = [
  "linux-native",
] }
# mlua = { version = "0.9.2", features = ["luajit"] }
# lua-src = "546.0.0"
mlua = { version = "0.9.2", features = ["luau", "vendored"] }

[target.'cfg(windows)'.dependencies]
hidapi = { git = "https://github.com/ruabmbua/hidapi-rs.git", rev = "78f273800a7e9fc7f428e45d2cfebaf7b44862c1" }
lua-src = "546.0.1"
mlua = { version = "0.9.2", features = ["luau", "vendored"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
thiserror = "1.0.48"
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
build-data = "0.1"
prost-build = "0.12.1"

[[bench]]
name = "benchmark"
harness = false
