#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "eruptionctl"
version = "0.1.3"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "A CLI control utility for the Eruption Linux user-mode driver"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[dependencies]
lazy_static = "1.4.0"
flume = "0.11"
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
ctrlc = { version = "3.4.1", features = ["termination"] }
cfg-if = "1.0.0"
colored = "2.0.4"
csscolorparser = { version = "0.6.2", features = ["serde"] }
console = "0.15.7"
log = "0.4.20"
libc = "0.2.148"
nix = "0.26.4"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
indexmap = { version = "2.0.0", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
# tracing = "0.1.26"
# tracing-futures = "0.2.5"
# tracing-subscriber = "0.2.20"
config = "0.13.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
toml = "0.8.0"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
comfy-table = "7.0.1"
paste = "1.0.14"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
icecream = "0.1.0"
same-file = "1"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["test-util"] }
