#    SPDX-License-Identifier: GPL-3.0-or-later
#
#    This file is part of Eruption.
#
#    Eruption is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    Eruption is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#    Copyright (c) 2019-2022, The Eruption Development Team


[package]
name = "pyroclasm"
version = "0.0.3"
build = "build.rs"
authors = [
    "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
    "The Eruption Development Team",
]
edition = "2021"
description = "Pyroclasm UI for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "gui", "egui"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
# default = [""]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.4", features = ["derive"] }
clap_complete = "4.4.1"
log = "0.4.20"
pretty_env_logger = "0.4.0"
libc = "0.2.148"
nix = "0.26.4"
walkdir = "2.4.0"
flume = { version = "0.10.14", features = ["async"] }
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
# tracing-flame = "0.2.0"
tracing-subscriber = "0.3.17"
config = "0.13.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
toml = "0.8.0"
indexmap = "1.9.3"
byteorder = "1.4.3"
lazy_static = "1.4.0"
palette = "0.6.1"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
paste = "1.0.14"
dbus = "0.9.7"
dbus-tokio = "0.7.6"
i18n-embed = { version = "0.13.9", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.6.7"
rust-embed = { version = "6.8.1", features = ["compression"] }
unic-langid = "0.9.1"
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
egui = { version = "0.21.0", features = ["serde", "tracing"] }
egui_extras = { version = "0.21.0", features = [
    "tracing",
    "image",
    "svg",
    "datepicker",
] }
egui-notify = "0.6.0"
egui_logger = "0.3.1"
egui-modal = "0.2.4"
egui_inspect = "0.1.3"
egui_file = "0.8.3"
egui_dock = "0.5.2"
# egui-datepicker = "0.3"
# egui_cable = "0.3.0"
# egui-bind = "0.4.0"
egui_hotkey = { version = "0.2.0", features = ["serde"] }
egui_commonmark = { version = "0.7.4", features = [
    "syntax_highlighting",
    "svg",
] }
eframe = { version = "0.21.3", features = ["persistence"] }
tiny-skia = "0.9.1"
syntect = "5.1.0"
icecream = "0.1.0"
pretty_assertions = "1.4.0"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["test-util"] }
