#  SPDX-License-Identifier: GPL-3.0-or-later
#
#  This file is part of Eruption.
#
#  Eruption is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  Eruption is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Eruption.  If not, see <http://www.gnu.org/licenses/>.
#
#  Copyright (c) 2019-2023, The Eruption Development Team

[package]
name = "pyroclasm"
version = "0.0.10"
build = "build.rs"
authors = [
  "X3n0m0rph59 <x3n0m0rph59@gmail.com>",
  "The Eruption Development Team",
]
edition = "2021"
rust-version = "1.69"
description = "Pyroclasm UI for Eruption"
repository = "https://github.com/X3n0m0rph59/eruption.git"
homepage = "https://eruption-project.org"
keywords = ["eruption", "linux", "led", "driver", "gui", "egui"]
categories = ["hardware-support"]
license = "GPL-3.0-or-later"
readme = "README.md"
resolver = "2"

[features]
# default = ["dbus-ipc", "mimalloc_allocator"]
default = ["dbus-ipc"]
windows = ["dbus-ipc"]
dbus-ipc = ["dbus"]
mimalloc_allocator = ["mimalloc"]

[dependencies]
mimalloc = { version = "0.1.39", optional = true, default-features = false }
cfg-if = "1.0.0"
clap = { version = "4.3.24", features = ["derive"] }
clap_complete = "4.3.2"
libc = "0.2.148"
nix = "0.27.1"
is-terminal = "0.4.9"
walkdir = "2.4.0"
flume = { version = "0.11.0", features = ["async"] }
parking_lot = { version = "0.12.1", features = [
  # "send_guard",
  "deadlock_detection",
  "hardware-lock-elision",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-journald = "0.3.0"
tracing-futures = "0.2.5"
# tracing-flame = "0.2.0"
tracing-log = { version = "0.1.3", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.17", features = [
  "parking_lot",
  "registry",
  "env-filter",
] }
console-subscriber = { version = "0.2.0", features = ["parking_lot"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
toml = "0.8.0"
indexmap = "2.0.0"
byteorder = "1.4.3"
lazy_static = "1.4.0"
palette = "0.7.3"
thiserror = "1.0.48"
eyre = "0.6.8"
color-eyre = "0.6.2"
paste = "1.0.14"
dbus = { version = "0.9.7", optional = true }
i18n-embed = { version = "0.14.0", features = [
  "fluent-system",
  "desktop-requester",
] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.0.0", features = ["compression"] }
unic-langid = "0.9.1"
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
egui = { version = "0.23.0", features = ["serde"] }
egui_extras = { version = "0.23.0", features = ["image", "svg", "datepicker"] }
eframe = { version = "0.23.0", features = ["persistence"] }
egui-bind = { version = "0.8.0", features = ["serde"] }
egui-toast = { git = "https://github.com/urholaukkarinen/egui-toast.git", branch = "main" }
egui-modal = "0.2.4"
egui_inspect = "0.1.3"
egui_file = "0.11.0"
egui_dock = "0.8.0"
egui_commonmark = { version = "0.8.0", features = [
  "better_syntax_highlighting",
  "svg",
] }
syntect = "5.1.0"
icecream = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
